Fix for bug #51072# Pop out view: Burger menu size doesn't fit to menu entries.

--- a/ui/apps/io.ox/core/viewer/style.less
+++ b/ui/apps/io.ox/core/viewer/style.less
@@ -452,7 +452,6 @@
             display: inline-block;
         }
 
-        .fitzoom-check { display: none; }
     }
 
     // show active sidebar button in toolbar when sidebar is open
